cmake -E tar fails to create archive with "archive_write_header: Can't record entry in tar file without pathname" on Windows 10
The issue is present, when Language Settings -> Administrative language settings -> Change system locale... -> Beta: Use Unicode UTF-8 for worldwide language support
is enabled. When option is disabled it works as expected.
Please, find below steps to reproduce, cmake and system info.
c:\work\test_cmake_tar>cmake -E tar c out.tar -- file.txt
CMake Error: archive_write_header: Can't record entry in tar file without pathname
CMake Error: Problem creating tar: out.tar
c:\work\test_cmake_tar>type file.txt
Hi to builtin tar archiver
c:\work\test_cmake_tar>cmake --version
cmake version 3.16.3
CMake suite maintained and supported by Kitware (kitware.com/cmake).
Excerpt from systeminfo output:
OS Name: Microsoft Windows 10 Pro
OS Version: 10.0.18363 N/A Build 18363
OS Manufacturer: Microsoft Corporation
OS Configuration: Standalone Workstation
OS Build Type: Multiprocessor Free
System Type: x64-based PC
System Locale: en-us;English (United States)
Input Locale: en-us;English (United States)
Time Zone: (UTC+02:00) Helsinki, Kyiv, Riga, Sofia, Tallinn,
This issue may be related to #20050 (closed)
Edited by Ivan Onyshchenko